[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Team/Worker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Team/TeamScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Buttons/MM_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Font_Regular20.tres" type="DynamicFont" id=4]

[node name="TeamScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="CenterContainer"]
margin_left = 320.0
margin_top = 320.0
margin_right = 320.0
margin_bottom = 320.0

[node name="Back_Button" parent="CenterContainer/Control" instance=ExtResource( 3 )]
margin_left = -171.0
margin_top = 170.0
margin_right = 164.0
margin_bottom = 238.0
buttonText = "BACK"

[node name="TeamSize" type="Label" parent="CenterContainer/Control"]
margin_left = -300.0
margin_top = -235.0
margin_right = 300.0
margin_bottom = -195.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TEAM_SIZE"
align = 1
valign = 1

[node name="Management" parent="CenterContainer/Control" instance=ExtResource( 1 )]
margin_left = -210.0
margin_top = -180.0
margin_right = -135.0
margin_bottom = -165.0

[node name="Development" parent="CenterContainer/Control" instance=ExtResource( 1 )]
margin_left = -96.0
margin_top = -180.0
margin_right = -21.0
margin_bottom = -165.0

[node name="Design" parent="CenterContainer/Control" instance=ExtResource( 1 )]
margin_left = 19.0
margin_top = -180.0
margin_right = 94.0
margin_bottom = -165.0

[node name="Product" parent="CenterContainer/Control" instance=ExtResource( 1 )]
margin_left = 135.0
margin_top = -180.0
margin_right = 210.0
margin_bottom = -165.0

[node name="Marketing" parent="CenterContainer/Control" instance=ExtResource( 1 )]
margin_left = -153.0
margin_top = -10.0
margin_right = -78.0
margin_bottom = 5.0

[node name="QA" parent="CenterContainer/Control" instance=ExtResource( 1 )]
margin_left = -38.0
margin_top = -10.0
margin_right = 37.0
margin_bottom = 5.0

[node name="Support" parent="CenterContainer/Control" instance=ExtResource( 1 )]
margin_left = 78.0
margin_top = -10.0
margin_right = 153.0
margin_bottom = 5.0

[connection signal="buttonPressed" from="CenterContainer/Control/Back_Button" to="." method="_on_Back_Button_buttonPressed"]
